--- a/src/CanvasPowerCoffee/Src/LandingScreen.fx.yaml
+++ b/src/CanvasPowerCoffee/Src/LandingScreen.fx.yaml
@@ -182,6 +182,8 @@ LandingScreen As screen:
                     )
                 );
                 Set(varUserDefaultSite, First(colSites));
+                    Set(varDefaultBrew, varUserDefaultSite.SiteName);
+                    Set(varDefaultRoast, "Medium");
             Text: ="onVis"
             Width: =96
             X: =0
